Se agregaron configuraciones en hypr

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -57,6 +57,7 @@ exec-once = swww init
 exec-once = waypaper --restore
 exec-once = clipse -listen 
 exec-once = waybar
+exec = nm-applet --indicator
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-clipboard copy
 #exec-once = bash -c "sleep 1 && /home/lugo/.local/bin/terminal-bg --script 'clock-rs -t -c black clock' --monitor 0 --x 0 --y 10 --w 600 --h 300"
@@ -72,15 +73,15 @@ exec-once = dunst &
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 # Variables de entorno para XCursor (fallback GTK, apps X11)
-env = XCURSOR_THEME,Bibata-Modern-Ice 
+env = XCURSOR_THEME,DeppinWhite-cursors
 env = XCURSOR_SIZE,16
 
 # Variables de entorno para hyprcursor (Wayland nativo)
-env = HYPRCURSOR_THEME,Bibata-Modern-Ice 
+env = HYPRCURSOR_THEME,DeppinWhite-cursors
 env = HYPRCURSOR_SIZE,16
 
 # Aplica al iniciar la sesión
-exec-once = hyprctl setcursor Bibata-Modern-Ice  16
+exec-once = hyprctl setcursor DeppinWhite-cursors 16
 
 #Variable de entorno para matlab
 #QT_QPA_PLATFORM=xcb
@@ -241,10 +242,10 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.1 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 } 
 
