--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -166,39 +166,38 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
+#https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
+    bezier = default, 0.05, 0.9, 0.1, 1.05
     bezier = wind, 0.05, 0.9, 0.1, 1.05
-    bezier = winIn, 0.1, 1.1, 0.1, 1.1
-    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = overshot, 0.13, 0.99, 0.29, 1.08
     bezier = liner, 1, 1, 1, 1
+    bezier = bounce, 0.4, 0.9, 0.6, 1.0
+    bezier = snappyReturn, 0.4, 0.9, 0.6, 1.0
 
-    animation = global, 1, 10, default
-    animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 6, winIn, slide
-    animation = windowsOut, 1, 5, winOut, slide
-    animation = windowsMove, 1, 5, wind, slide
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 10, default
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 5, wind
+    bezier = slideInFromRight, 0.5, 0.0, 0.5, 1.0
+    animation = windows, 1, 4,  snappyReturn, slidevert
+    animation = windowsIn, 1, 4, snappyReturn, slidevert right 
+  
+    animation = windowsOut, 1, 4, snappyReturn, slide 
+    animation = windowsMove, 1, 4, bounce, slide
+    animation = layersOut, 1, 4, bounce, slidevert right
+    animation = fadeIn, 1, 10, default
+    animation = fadeOut, 1, 10, default
+    animation = fadeSwitch, 1, 10, default
+    animation = fadeShadow, 1, 10, default
+    animation = fadeDim, 1, 10, default
+    animation = fadeLayers, 1, 10, default
+    animation = workspaces, 1, 5, overshot, slide
     animation = border, 1, 1, liner
-    #animation = borderangle, 1, 30, liner, loop
-    # animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = layers, 1, 2, bounce, slidevert right
+    animation = borderangle, 1, 30, liner, loop
 }
+
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
@@ -251,7 +250,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -273,6 +272,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, T, exit,
+bind = $mainMod, Y, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 #bind = $mainMod, $mainMod_L, exec,pkill tofi || $menu
@@ -341,7 +341,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
@@ -376,21 +376,20 @@ windowrulev2 = opacity 0.4 0.4,class:^(Rofi)$
 
 # Common Modals
 windowrule = float, class:^(org.gnome.Nautilus)$
+windowrulev2 = size 700 450, class:(org.gnome.Nautilus)
 windowrule = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 650 450, class:(org.pulseaudio.pavucontrol)
 windowrule = float, class:^(blueman-manager)$
 windowrule = float, class:^(waypaper)$
 windowrule = float, title:^(OneDriveGUI v1.1.1)$
 windowrulev2 = size 200 600, title:(OneDriveGUI v1.1.1)
 windowrulev2 = float,class:(clipse) 
-windowrulev2 = size 622 652,class:(clipse) 
+windowrulev2 = size 422 452,class:(clipse) 
 windowrulev2 = float,class:(org.gnome.Evince) 
 windowrule = float, class:^(imv)$
 
-
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
-
-
 
 # Fix some dragging issues with XWayland
 windowrule = float, class:nautilus
