--- a/configs/waypaper/config.ini
+++ b/configs/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Pictures/Wallpapers
 monitors = All
-wallpaper = ~/Pictures/Wallpapers/1398515.png
+wallpaper = ~/Pictures/Wallpapers/wallhaven-d8gog3.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = fill
