Cambios en hyprland.conf

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -60,6 +60,7 @@ exec-once = waybar
 exec = nm-applet --indicator
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-clipboard copy
+exec-once = OneDriveGUI
 #exec-once = bash -c "sleep 1 && /home/lugo/.local/bin/terminal-bg --script 'clock-rs -t -c black clock' --monitor 0 --x 0 --y 10 --w 600 --h 300"
 #exec-once = bash -c "sleep 2 && /home/lugo/.local/bin/terminal-bg --script cava --monitor 0 --x 0 --y 980 --w 1920 --h 100"
 #exec-once = /home/lugo/.config/hypr/userScrips/clockDesktop.sh
@@ -381,8 +382,8 @@ windowrule = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 650 450, class:(org.pulseaudio.pavucontrol)
 windowrule = float, class:^(blueman-manager)$
 windowrule = float, class:^(waypaper)$
-windowrule = float, title:^(OneDriveGUI v1.1.1)$
-windowrulev2 = size 200 600, title:(OneDriveGUI v1.1.1)
+windowrule = float, class:^(OneDriveGUI)$
+windowrulev2 = size 200 500, class:(OneDriveGUI)
 windowrulev2 = float,class:(clipse) 
 windowrulev2 = size 422 452,class:(clipse) 
 windowrulev2 = float,class:(org.gnome.Evince) 
