--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -57,7 +57,7 @@ exec-once = swww init
 exec-once = waypaper --restore
 exec-once = clipse -listen 
 exec-once = waybar
-exec = nm-applet --indicator
+# exec = nm-applet --indicator
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-clipboard copy
 #exec-once = OneDriveGUI
@@ -386,9 +386,10 @@ windowrule = float, class:^(waypaper)$
 windowrule = float, class:^(OneDriveGUI)$
 windowrulev2 = size 200 500, class:(OneDriveGUI)
 windowrulev2 = float,class:(clipse) 
-windowrulev2 = size 422 452,class:(clipse) 
+windowrulev2 = size 650 450,class:(clipse) 
 windowrulev2 = float,class:(org.gnome.Evince) 
 windowrule = float, class:^(imv)$
+windowrulev2 = float, class:^(com.network.manager)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
