--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -6,6 +6,7 @@
         "hyprland/language",
         "custom/separator1",
         "clock",
+        "network",
         "tray"
     ],
     "modules-center": [
@@ -55,15 +56,6 @@
             "on-click-right": "shift_down",
             "on-click": "shift_up"
         }
-    },
-    "network": {
-        "format-wifi": "",
-        "format-ethernet": "",
-        "format-disconnected": "",
-        "tooltip-format-disconnected": "Error",
-        "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
-        "tooltip-format-ethernet": "{ifname} 🖧 ",
-        "on-click": "kitty nmtui"
     },
     "bluetooth": {
         "format-on": "󰂯",
@@ -182,5 +174,25 @@
         },
         "scroll-step": 1,
         "on-click": "pavucontrol"
+    },
+    "network": {
+        "format": "{ifname}",
+        "format-wifi": "{icon}",
+        "format-ethernet": "󰌘",
+        "format-disconnected": "󰌙",
+        "tooltip-format": "{ipaddr}  {bandwidthUpBits}  {bandwidthDownBits}",
+        "format-linked": "󰈁 {ifname} (No IP)",
+        "tooltip-format-wifi": "{essid} {icon} {signalStrength}%",
+        "tooltip-format-ethernet": "{ifname} 󰌘",
+        "tooltip-format-disconnected": "󰌙 Disconnected",
+        "max-length": 30,
+        "format-icons": [
+            "󰤯",
+            "󰤟",
+            "󰤢",
+            "󰤥",
+            "󰤨"
+        ],
+        "on-click": "nmgui"
     }
 }
