Se Cambió el tema de SDDM, Se agg bogocat y se reeconfiguró waybar, además de configuraciones varias en hyprland.conf

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -65,6 +65,7 @@ exec-once = wl-clipboard copy
 #exec-once = bash -c "sleep 2 && /home/lugo/.local/bin/terminal-bg --script cava --monitor 0 --x 0 --y 980 --w 1920 --h 100"
 #exec-once = /home/lugo/.config/hypr/userScrips/clockDesktop.sh
 exec-once = dunst &
+exec-once = bongocat -c .dotfiles/configs/bongocat/bongocat.conf
 # exec-once = wal -R
 
 
@@ -286,7 +287,11 @@ bind = $mainMod, C, exec, $scriptsPath/colorPicker.sh
 bind = $mainMod, V, exec,  $terminal --class clipse -e 'clipse' 
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o $HOME/Pictures/Screenshots/
 bind = $mainMod, B, exec, pkill waybar || waybar &
+bind = $mainMod, B, exec, pkill bongocat || bongocat -c .dotfiles/configs/bongocat/bongocat.conf &
 bind = $mainMod, M, exec, $scriptsPath/music.sh
+# Atajo para fijar/soltar la ventana actual (sticky)
+bind = SUPER, P, pin
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
