--- a/configs/sddm.conf
+++ b/configs/sddm.conf
@@ -4,4 +4,4 @@
     GreeterEnvironment=QML2_IMPORT_PATH=/usr/share/sddm/themes/silent/components/,QT_IM_MODULE=qtvirtualkeyboard
 
     [Theme]
-    Current=silent
+    Current=minesddm
